--- a/package.json
+++ b/package.json
@@ -1,5 +1,28 @@
 {
   "dependencies": {
-    "express": "^4.21.2"
-  }
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "firebase-admin": "^13.2.0",
+    "jsonwebtoken": "^9.0.2"
+  },
+  "name": "wsg_backend",
+  "version": "1.0.0",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/McLareni/WSG_BackEnd.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/McLareni/WSG_BackEnd/issues"
+  },
+  "homepage": "https://github.com/McLareni/WSG_BackEnd#readme",
+  "description": ""
 }
